# hspec-expectations

./: .ghci  .gitattributes  .gitignore  .travis.yml  CHANGELOG.markdown  LICENSE  README.lhs  README.markdown  cabal.project  hspec-expectations.cabal  lhs-to-markdown.lhs  package.yaml  test-shouldbe.cabal
.github/workflows/: build.yml  publish.yml
example/: .ghci  Spec.hs
src/Test/HUnit/: ShouldBe.hs
src/Test/HUnit/ShouldBe/: Contrib.hs
src/Test/Hspec/: Expectations.hs
src/Test/Hspec/Expectations/: Contrib.hs  Floating.hs  Lifted.hs  Matcher.hs
test/: Helper.hs  Spec.hs
test/Test/: Utils.hs
test/Test/HUnit/: ShouldBeSpec.hs
test/Test/Hspec/: ExpectationsSpec.hs
test/Test/Hspec/Expectations/: ContribSpec.hs  FloatingSpec.hs  MatcherSpec.hs
