name:             hspec-expectations
version:          0.3.0.1
synopsis:         Catchy combinators for HUnit
description:      Catchy combinators for HUnit: <https://github.com/sol/hspec-expectations#readme>
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011, 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
category:         Testing
cabal-version:    >= 1.8
homepage:         https://github.com/sol/hspec-expectations#readme

source-repository head
  type: git
  location: https://github.com/sol/hspec-expectations

library
  ghc-options:
      -Wall
  build-depends:
      base < 4.6
    , HUnit
  hs-source-dirs:
      src
  exposed-modules:
      Test.Hspec.Expectations
    , Test.Hspec.Expectations.Contrib

test-suite spec
  main-is:
      Spec.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  build-depends:
      base        >= 4.0  && < 4.6
    , hspec-expectations
    , HUnit
    , silently
    , hspec
    , hspec-discover

test-suite readme-attoparsec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror -pgmL pandoc-unlit
  main-is:
      README.lhs
  build-depends:
      base
    , hspec-expectations
    , hspec
