name:             hspec-expectations
version:          0.3.3
synopsis:         Catchy combinators for HUnit
description:      Catchy combinators for HUnit: <https://github.com/sol/hspec-expectations#readme>
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011-2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
category:         Testing
cabal-version:    >= 1.8
homepage:         https://github.com/sol/hspec-expectations#readme

source-repository head
  type: git
  location: https://github.com/sol/hspec-expectations

library
  ghc-options:
      -Wall
  build-depends:
      base < 4.8
    , HUnit
  hs-source-dirs:
      src
  exposed-modules:
      Test.Hspec.Expectations
    , Test.Hspec.Expectations.Contrib

test-suite spec
  main-is:
      Spec.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src
    , test
  build-depends:
      base
    , HUnit
    , silently
    , hspec       >= 1.3

test-suite readme
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror -pgmL markdown-unlit -optL haskell+literate
  main-is:
      README.lhs
  build-depends:
      base
    , hspec       >= 1.3
    , markdown-unlit
