name:             hspec-expectations
version:          0.7.1
synopsis:         Catchy combinators for HUnit
description:      Catchy combinators for HUnit: <https://github.com/sol/hspec-expectations#readme>
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011-2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
category:         Testing
cabal-version:    >= 1.8
homepage:         https://github.com/sol/hspec-expectations#readme

source-repository head
  type: git
  location: https://github.com/sol/hspec-expectations

library
  ghc-options:
      -Wall
  build-depends:
      base == 4.*
    , HUnit
  hs-source-dirs:
      src
  exposed-modules:
      Test.Hspec.Expectations
    , Test.Hspec.Expectations.Contrib
  other-modules:
      Test.Hspec.Expectations.Matcher
